[gd_scene load_steps=7 format=2]

[ext_resource path="res://tres/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/stages/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/gameplay/BgmPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/LoadingPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/stages/Main.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.0784314 )

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 6 )

[node name="BgmPlayer" parent="." instance=ExtResource( 3 )]

[node name="Running" type="Node" parent="."]

[node name="Title" parent="Running" instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoadingPanel" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Debug" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )

[node name="Logger" type="RichTextLabel" parent="CanvasLayer/Debug"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -339.0
margin_right = 339.0
margin_bottom = 175.0
mouse_filter = 2
custom_styles/normal = SubResource( 1 )

[node name="FpsLabel" type="Label" parent="CanvasLayer/Debug"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_right = 48.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "FPS 60"

[connection signal="start_pressed" from="Running/Title" to="." method="_on_TitleStage_start_pressed"]
